create a website layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .header-button{
+    @apply cursor-pointer p-1 border border-transparent hover:border-white rounded-[2px];
+
+  }
+  .h1-bold{
+    @apply text-2xl font-bold lg:text-3xl;    
+  }
+}
